Fixing definitive and simpler (Lisp like) indexation